--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>React tutorial</title>
+    <title>MAN - TODO list</title>
   </head>
   <body>
+    <h1> Manfred TODO list</h1>
     <div id="app"></div>
-    <script src="dist/bundle.js"></script>
+    <footer>
+      <script src="assets/bundle.js"></script>
+    <footer>
   </body>
 </html>
