First header component

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MAN - TODO list</title>
+    <title>My TODO list</title>
   </head>
   <body>
-    <h1> Manfred TODO list</h1>
     <div id="app"></div>
     <footer>
       <script src="assets/bundle.js"></script>
-    <footer>
+    </footer>
   </body>
 </html>
