--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My TODO list</title>
+    <title>My TODO app</title>
   </head>
   <body>
     <div id="app"></div>
