--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="app"></div>
     <footer>
-      <script src="assets/bundle.js"></script>
+      <script src="bundle.js"></script>
     </footer>
   </body>
 </html>
